# LangChain-Chat-with-Your-Data

./: L1-Document_loading.ipynb  L2-Document_splitting.ipynb  L3-Vectorstores_and_Embeddings.ipynb  L4-Retrieval.ipynb  L5-Question_answering.ipynb  L6-Chat.ipynb  pyproject.toml
docs/chroma/: chroma.sqlite3
