[tool.poetry]
name = "langchain-chat-with-your-data"
version = "0.1.0"
description = ""
authors = ["Baptiste Pasquier <baptiste.pasquier@artefact.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.12.0"
python-dotenv = "^1.0.1"
langchain = "^0.1.8"
langchain-openai = "^0.0.6"
pydantic = "^1.10.14"
pypdf = "^4.0.2"
yt-dlp = "^2023.12.30"
pydub = "^0.25.1"
chromadb = "^0.4.22"
lark = "^1.1.9"
beautifulsoup4 = "^4.12.3"
tiktoken = "^0.6.0"
scikit-learn = "^1.4.1.post1"
panel = "^1.3.8"
docarray = "^0.40.0"
jupyter-bokeh = "^3.0.7"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
